overflow fix

--- a/src/Components/HomeSection/home.css
+++ b/src/Components/HomeSection/home.css
@@ -48,7 +48,7 @@
   display: flex;
   justify-content: right;
   flex-direction: column;
-  overflow: hidden;
+  overflow-x: hidden;
   /* padding-left: 90px;
   padding-right: 90px; */
   padding: 40px;
